@@ -25,6 +25,7 @@
 - INTERNAL: Don't update navigation table if it's not visible
 - FIX: Images with alpha channel are displayed wrong
 - FIX: Too much memory needed when retrieving artist images from Last.fm with original size
+- FIX: Deleting many files from device freezes aTunes gui for some seconds [2855962]
 
 aTunes 1.13.3
 -------------
